laravel-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: laravel-service
spec:
  type: NodePort
  selector:
    app: laravel-app
  ports:
    - port: 80  # Target Nginx
      targetPort: 80
      nodePort: 30080
